# template-python

./: README.md  pyproject.toml
