[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "Python template project"
authors = ["fbjarkes <fbjarkes-github.q5706@aleeas.com>"]
readme = "README.md"
packages = [{include = "template_python"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
